[gd_scene load_steps=5 format=3 uid="uid://cp0icl32oxv5t"]

[ext_resource type="Script" path="res://scenes/Cell.gd" id="1_rx1by"]
[ext_resource type="Material" uid="uid://cojyaom4o334v" path="res://assets/materials/Dirt.tres" id="2_gnwh3"]

[sub_resource type="BoxShape3D" id="BoxShape3D_41m4m"]
size = Vector3(0.001, 1, 1)

[sub_resource type="QuadMesh" id="QuadMesh_q1yot"]

[node name="Cell" type="Area3D"]
collision_layer = 2
script = ExtResource("1_rx1by")

[node name="West" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.000499994, 0.5, -0.5)
shape = SubResource("BoxShape3D_41m4m")

[node name="WestFace" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0.5, -0.5)
layers = 2
material_override = ExtResource("2_gnwh3")
cast_shadow = 0
mesh = SubResource("QuadMesh_q1yot")

[node name="East" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0.5, -0.5)
shape = SubResource("BoxShape3D_41m4m")

[node name="EastFace" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 1, 0.5, -0.5)
layers = 2
material_override = ExtResource("2_gnwh3")
mesh = SubResource("QuadMesh_q1yot")

[node name="South" type="CollisionShape3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.5, 0.5, 0)
shape = SubResource("BoxShape3D_41m4m")

[node name="SouthFace" type="MeshInstance3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0.5, 0.5, 0)
layers = 2
material_override = ExtResource("2_gnwh3")
mesh = SubResource("QuadMesh_q1yot")

[node name="North" type="CollisionShape3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.5, 0.5, -1)
shape = SubResource("BoxShape3D_41m4m")

[node name="NorthFace" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0.5, -1)
layers = 2
material_override = ExtResource("2_gnwh3")
mesh = SubResource("QuadMesh_q1yot")

[node name="BottomFace" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0.5, 0, -0.5)
layers = 2
material_override = ExtResource("2_gnwh3")
mesh = SubResource("QuadMesh_q1yot")

[node name="TopFace" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0.5, 1, -0.5)
layers = 2
material_override = ExtResource("2_gnwh3")
mesh = SubResource("QuadMesh_q1yot")
